--- a/index.html
+++ b/index.html
@@ -18,8 +18,54 @@
 
     </head>
     <body>
-        <main class="container">
-            <h1>Movies from 2014</h1>
+        <main class="container" ng-app = "AngularDemo">
+            <section ng-controller="HelloController">
+                <h1>Introduce yourself</h1>
+                <p><input type="text" class="form-control"
+                          placeholder="enter your first name" ng-model="person.firstName"/></p>
+
+                <p><input type="text" class="form-control"
+                          placeholder="enter your last name" ng-model="person.lastName"/></p>
+
+                <p>Hello {{person.firstName}} {{person.lastName}}</p>
+
+            </section>
+
+            <section ng-controller="MoviesController">
+                <h1>Movies from 2014</h1>
+
+                <p><input type="search" class = "form-control" placeholder="search for a title"
+                        ng-model="searchString"/></p>
+
+
+                <p>{{filteredMovies.length}} {{1 == filteredMovies.length ? 'movie' : 'movies'}}</p>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th ng-click="sortBy('title')" ng-class ="{sorted: isSortedBy('title')}">Title</th>
+                            <th ng-click="sortBy('grossSales')" ng-class ="{sorted: isSortedBy('grossSales')}">Sales</th>
+                            <th ng-click="sortBy('ticketsSold')" ng-class ="{sorted: isSortedBy('ticketsSold')}">Tickets</th>
+                            <th ng-click="sortBy('releaseDate')" ng-class ="{sorted: isSortedBy('releaseDate')}">Release Date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    <!-- for assignment just need <tr ng-repeat="movie in movies | filter: searchString"
+                     to search for all (departments, fName, lName, etc)-->
+                        <tr ng-repeat="movie in filteredMovies = (movies
+                        | filter : {title: searchString}
+                        | orderBy : sortCol : sortReverse)">
+                            <td>{{movie.title}}</td>
+                            <td>{{movie.grossSales | currency : '$' : 0}}</td>
+                            <td>{{movie.ticketsSold | number}}</td>
+                            <td>{{movie.releaseDate | date : 'longDate'}}</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+
+            </section>
+
 
         </main>
 
